--- a/app/src/main/res/layout/intro_choice_page.xml
+++ b/app/src/main/res/layout/intro_choice_page.xml
@@ -16,8 +16,7 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.069"
-        tools:layout_editor_absoluteX="19dp" />
+        app:layout_constraintVertical_bias="0.069" />
 
     <EditText
         android:id="@+id/carName"
@@ -26,8 +25,7 @@
         android:layout_marginTop="220dp"
         android:hint="@string/choice_edittext"
         android:inputType="text"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="43dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"/>
 
     <EditText
         android:id="@+id/mileage"
