Changes in SettingsActivity

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,10 +28,7 @@
         <item name="colorSwitchThumbNormal">#FFFFFF</item>
         <item name="android:colorForeground">#99FFFFFF</item>
     </style>
-    <style name="Theme.CarRepair.Settings" parent="Theme.Material3.*">
-        <item name="android:statusBarColor">?attr/colorPrimary</item>
-        <item name="android:textColor">?attr/colorOnPrimary</item>
-    </style>
 
+    <style name="Theme.M3SelectableComponents" parent="android:Theme.Material.Light.NoActionBar" />
 
 </resources>
