--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,4 +31,21 @@
 
     <style name="Theme.M3SelectableComponents" parent="android:Theme.Material.Light.NoActionBar" />
 
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        // App theme styling
+    </style>
+
+
+
+
+
+    <style name="Widget.App.Switch" parent="Widget.Material3.CompoundButton.MaterialSwitch">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.Switch</item>
+    </style>
+
+    <style name="ThemeOverlay.App.Switch" parent="">
+        <item name="colorPrimary">@color/pink_200</item>
+        <item name="colorSurfaceVariant">@color/pink_100</item>
+    </style>
+
 </resources>
