--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     <color name="purple_200">#FFBB86FC</color>
-    <color name="night_mode">#FF6200EE</color>
+    <color name="night_mode">#1B1C15</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
@@ -22,7 +22,5 @@
 
     <color name="switch_checked">#416F06</color>
     <color name="switch_unchecked">#8C8C84</color>
-
-    <color name="switch_color">#1B1C15</color>
 
 </resources>
