--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,18 +1,21 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.CarRepair" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.CarRepair" parent="Theme.Material3.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#7B68EE</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimaryVariant">#7B68EE</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">#A8A9AD</item>
+        <item name="android:statusBarColor">?attr/colorPrimary</item>
         <!-- Customize your theme here. -->
+        <item name="materialSwitchStyle">@style/Widget.App.Switch</item>
+
     </style>
+
 
     <style name="Theme.CarRepair.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -24,28 +27,23 @@
     <style name="Theme.CarRepair.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="night_mode_switch" parent="Theme.AppCompat.Light">
-        <item name="colorControlActivated">@color/night_mode</item>
+        <item name="colorControlActivated">@color/switch_color</item>
         <item name="colorSwitchThumbNormal">#FFFFFF</item>
         <item name="android:colorForeground">#99FFFFFF</item>
     </style>
 
     <style name="Theme.M3SelectableComponents" parent="android:Theme.Material.Light.NoActionBar" />
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        // App theme styling
-    </style>
-
-
-
-
-
     <style name="Widget.App.Switch" parent="Widget.Material3.CompoundButton.MaterialSwitch">
         <item name="materialThemeOverlay">@style/ThemeOverlay.App.Switch</item>
     </style>
 
     <style name="ThemeOverlay.App.Switch" parent="">
-        <item name="colorPrimary">@color/pink_200</item>
-        <item name="colorSurfaceVariant">@color/pink_100</item>
+        <item name="colorPrimary">#9CD57C</item>
+        <item name="colorSurfaceVariant">#555750</item>
     </style>
+
+
+
 
 </resources>
