--- a/app/src/main/res/layout/fragment_intro_info.xml
+++ b/app/src/main/res/layout/fragment_intro_info.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="18dp"
         android:gravity="center"
-        android:text="Enter Car name and Mileage"
+        android:text="@string/text_intro_info"
         android:textStyle="bold"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="18dp"
-        android:hint="Enter Car Name"
+        android:hint="@string/carname_intro"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.542"
@@ -41,7 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="18dp"
-        android:hint="Enter Mileage"
+        android:hint="@string/mileage_intro"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.542"
